# cargo-virtual-machine

./: .gitignore  README.md
assembler/: cvm-assembler.cabal
assembler/lib/: Assembler.hs  Disassembler.hs
assembler/lib/Assembler/: Error.hs  Translator.hs
assembler/lib/Assembler/IR/: Aliases.hs  FunctionDef.hs  InstructionSet.hs  Module.hs  Operator.hs  ProgramGraph.hs  ProgramText.hs  QLabel.hs  RawFormat.hs  StaticMemory.hs  Text.hs
assembler/lib/Assembler/Parser/: Aliases.hs  FunctionDef.hs  IO.hs  Lexer.hs  Literals.hs  Module.hs  Operator.hs  ProgramGraph.hs  QLabel.hs  StaticMemory.hs
assembler/lib/Assembler/Resolver/: Aliases.hs  ModuleDeps.hs  ProgramCodeDeps.hs  SymbolicRefs.hs
c/: cvm-assembler.cabal  cvma.draft  cvmc.draft
c/lib/: Dependencies.hs  Error.hs  Graph.hs  Lexer.hs  Literals.hs  Module.hs  ModuleGraph.hs  Parser.hs  ParserTypes.hs  ProgramGraphTraversal.hs  SymbolsResolution.hs  Translation.hs
c/t/: Main.casm  factorial.cvm  fibonacci.cvm  instructions.draft  main.cvm  parseTextCheck.casm
c/t/Fancy/Math/: Factorial.casm  Fibonacci.casm
