cabal-version:      2.4
name:               cvm-assembler
version:            0.1.0.0
author:             user7723
maintainer:         jmp.loop@kittens.org

library
  exposed-modules:
      Module
    , Parser
  build-depends:
      base
    , text
    , optparse-applicative
    , megaparsec
    , parser-combinators
    , reinterpret-cast
  hs-source-dirs:
    lib
  ghc-options:
    -Wall
  default-language: Haskell2010

executable cvma
  main-is:
    Main.hs
  hs-source-dirs:
    app
  build-depends:
      base
    , cvm-assembler
    , bytestring
  ghc-options:
    -Wall
  default-language: Haskell2010

-- test-suite tests
--   type:
--     exitcode-stdio-1.0
--   hs-source-dirs:
--     tests
--   default-language:
--     Haskell2010
--   main-is: Main.hs
--   ghc-options:
--     -Wall
--     -O2
--   build-depends:
--       base
--     , QuickCheck
--     , cvm-compiler
